apps/subscription-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-tracker
  namespace: default
spec:
  selector:
    app: subscription-tracker
  ports:
    - port: 80
      targetPort: 8000
